tests/build/fail/widget/property_already_set_in_when.stderr
error: property `margin` already set in this `when` block
  --> $DIR/property_already_set_in_when.rs:12:13
   |
12 |             margin = 2;
   |             ^^^^^^
